# shooter3

./: .gitignore  Cargo.toml
.cargo/: config
src/: camera.rs  controller.rs  frame.rs  lib.rs  main.rs  predict.rs
