[package]
name = "renet_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy_renet = "0.0.5"
bevy_rapier3d = "0.16"
bevy_egui = "0.15"
bincode = "1"
serde = "1"
serde_json = "1"
renet_visualizer = "0.0.2"
smooth-bevy-cameras = "0.5"
rand = "0.8"
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
